# graph-tree-rag

./: .env.example  .gitignore  README.md  cli.py  orchestrator.py  pyproject.toml
api/: __init__.py  schemas.py  server.py
config/: settings.py
config/prompts/: community_summary.txt  crag_evaluation.txt  entity_extraction.txt  hyde_generation.txt  query_decomposition.txt  self_rag_reflection.txt  speculative_draft.txt
evaluation/: __init__.py  ablation_runner.py  failure_analyzer.py  metrics.py  regression_suite.py
evaluation/test_queries/: sample_queries.json
generation/: __init__.py  crag_evaluator.py  response_builder.py  self_rag.py  speculative_rag.py
graph_tree_rag/: __init__.py
ingestion/: __init__.py  cortex_store.py  document_processor.py  entity_extractor.py  graph_builder.py  neural_graph.py  tree_builder.py  turboquant.py  vector_indexer.py
observability/: __init__.py  explainer.py  tracer.py
retrieval/: __init__.py  cortex_retriever.py  graph_retriever.py  hybrid_fuser.py  hyde.py  neural_retriever.py  query_router.py  reranker.py  tree_retriever.py
security/: __init__.py  access_control.py  audit.py  pii_filter.py  prompt_guard.py
tests/: __init__.py  test_cortex_store.py  test_document_processor.py  test_hybrid_fuser.py  test_metrics.py  test_neural_graph.py  test_query_router.py  test_security.py
