[project]
name = "graph-tree-rag"
version = "2.0.0"
description = "Advanced Hybrid RAG: Tree Routing + Graph Retrieval + Speculative Generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sai Kiran Reddy" }]

dependencies = [
    # LLM abstraction
    "litellm>=1.40.0",
    "openai>=1.30.0",

    # Embeddings & vector search
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",

    # Sparse retrieval
    "rank-bm25>=0.2.2",

    # Graph
    "networkx>=3.3",
    "graspologic>=3.4.0",
    "cdlib>=0.4.0",

    # Clustering (RAPTOR tree)
    "scikit-learn>=1.5.0",
    "umap-learn>=0.5.6",

    # Re-ranking
    "transformers>=4.41.0",
    "torch>=2.3.0",

    # Security
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Evaluation
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "structlog>=24.2.0",

    # Web search fallback
    "httpx>=0.27.0",

    # Utilities
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
gtr = "graph_tree_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_tree_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
